Discovery for Windows and other platforms without native regex and glob support.

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -1,10 +1,12 @@
 
 bin_PROGRAMS    = cdctool
 cdctool_CFLAGS  = -I@top_srcdir@/lib
-cdctool_LDFLAGS = -L@top_builddir@/lib -lcdctool @POPT@
+cdctool_LDFLAGS = -no-undefined
+cdctool_LDADD   = -L@top_builddir@/lib -lcdctool @POPT@
 cdctool_SOURCES = CDC_tool.c
 
 bin_PROGRAMS       += cdcdiscover
 cdcdiscover_CFLAGS  = -I@top_srcdir@/lib
-cdcdiscover_LDFLAGS = -L@top_builddir@/lib -lcdctool @POPT@
+cdcdiscover_LDFLAGS = -no-undefined
+cdcdiscover_LDADD   = -L@top_builddir@/lib -lcdctool @POPT@
 cdcdiscover_SOURCES = CDC_discover.c
