--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,6 @@
-SUBDIRS = lib bin
+SUBDIRS = gnulib lib bin
 ACLOCAL_AMFLAGS = -I m4
+EXTRA_DIST = m4/gnulib-cache.m4
 
 doxygen-doc:
 	make -C lib doxygen-doc
