pkg-config support.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = gnulib lib bin
 ACLOCAL_AMFLAGS = -I m4
-EXTRA_DIST = m4/gnulib-cache.m4
+EXTRA_DIST = m4/gnulib-cache.m4 cdctool.pc.in
 
 doxygen-doc:
 	make -C lib doxygen-doc
@@ -16,6 +16,9 @@ doxygen-ps:
 
 doxygen-pdf:
 	make -C lib doxygen-pdf
+
+pkgconfigdir = $(datarootdir)/pkgconfig
+pkgconfig_DATA = cdctool.pc
 
 windows: all
 	BININST=@PACKAGE_NAME@-@PACKAGE_VERSION@-w32 && \
