--- a/gnulib/Makefile.in
+++ b/gnulib/Makefile.in
@@ -139,6 +139,8 @@ BITSIZEOF_WCHAR_T = @BITSIZEOF_WCHAR_T@
 BITSIZEOF_WINT_T = @BITSIZEOF_WINT_T@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
+CDC_PC_CFLAGS = @CDC_PC_CFLAGS@
+CDC_PC_LDFLAGS = @CDC_PC_LDFLAGS@
 CFLAGS = @CFLAGS@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
